# ForensiZK

./: .gitignore  README.md
ForensiZK/backend/: .env  package-lock.json  package.json  server.js
ForensiZK/backend/proofs/: 19399251-5aff-456f-9a85-6bbce64bc566.public.json
ForensiZK/backend/routes/: auth.js  prove.js  status.js  verify.js
ForensiZK/backend/services/: jobQueue.js  merkle.js  parser.js  upload.js
ForensiZK/backend/ws/: progress.js
ForensiZK/frontend/: package-lock.json  package.json
ForensiZK/frontend/app/: layout.tsx  page.tsx
ForensiZK/prover/: Cargo.toml
ForensiZK/prover/src/: analyzer.rs  circuit.rs  commit.rs  main.rs  parser.rs  utils.rs  witness.rs
