[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
regex = "1"

[profile.release]
opt-level = 3
